--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -68,3 +68,33 @@ a:visited{
     width: 30px;
     height: 30px;
 }
+
+.navlinks .my-courses{
+    margin-right: 0px;
+}
+
+.navlinks .courses-arrow{
+    margin-left: 0px;
+}
+
+.dropdown{
+    position: relative;
+}
+
+.show-list{
+    display: block;
+}
+
+.dropdown-list{
+    display: none;
+    width: auto;
+    position: absolute;
+}
+
+.dropdown-list > li{
+    list-style: none;
+    padding: 5px 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    border-top: 2px solid lightskyblue;
+}
