--- a/frontend/src/stylesheets/courses.css
+++ b/frontend/src/stylesheets/courses.css
@@ -17,7 +17,7 @@
 .course-list-item{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     width: 300px;
-    height: 300px;
+    height: 270px;
     margin: 20px 20px; 
     border-radius: 10px;
     text-align: center;
@@ -25,6 +25,7 @@
     background-size: cover;
     position: relative;
     z-index: 1;
+    padding-top: 30px;
     
 }
 
@@ -47,9 +48,19 @@
     font-size: 16px;
     cursor: pointer;
 }
-.course-list-item h1{
-    margin-top: 10%;
+.course-list-item #title{
+    
     font-size: 24px;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.course-list-item #title:hover{
+    
+    background-color: transparent;
+    color: rgb(64, 152, 224);
 }
 
 .form label{
