--- a/frontend/src/stylesheets/lesson.css
+++ b/frontend/src/stylesheets/lesson.css
@@ -25,8 +25,18 @@
     margin: 10px;
 }
 .comment-heatmap{
+    display: flex;
     border: 1px solid palevioletred;
-    height: 25px;
+    height: fit-content;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     border-radius: 4px;
-    width: 87%;
+    width: 90%;
+}
+
+.heatmap-canvas{
+    width: 100%;
+    height: 50px;
+    margin: 0px 15px;
 }
