add style to course show page and redirecting

--- a/frontend/src/stylesheets/courses.css
+++ b/frontend/src/stylesheets/courses.css
@@ -86,6 +86,61 @@
 
 
 }
+.show-box{
+    margin: 20px;
+    margin-left: 5%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    background-color: #fafafa;
+    box-shadow: 2px 2px 5px 0px rgba(141, 140, 140, 0.75);
+    border-radius: 5px;
+    padding: 30px, 30px;
+    width: 90%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+}
+.course-content{
+    display: flex;
+
+}
+
+.lesson-list{
+    width:70%;
+}
+
+.info, .lesson-list{
+    margin-left: 30px;
+    
+}
+
+.lesson-list ol li{
+    height: 20px;
+    width: 300px;
+    background-color: rgba(230, 230, 230, 0.7);
+    padding: 10px;
+    vertical-align: middle;
+    margin-top: 10px;
+    border-radius: 5px;
+}
+
+.lesson-list ol li a{
+    height:100%;
+    width:100%;
+    color: #333;
+}
+.lesson-list ol li a:hover, .lesson-list a{
+   background-color:transparent;
+}
+
+.lesson-list ol li:hover{
+   background-color: rgb(118, 172, 243);
+   font-weight: bold;
+}
+
+.student-list ul li{
+    list-style: none;
+}
 
 
 
