--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -1,12 +1,24 @@
+.body{
+    min-width: 800px;
+}
+
+.navbar-placeholder{
+    width: 100%;
+    height: 80px;
+}
+
 .navbar-container{
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 80px;
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: rgb(243, 243, 243);
+    box-shadow: 0px 1px 10px 0px #c4c4c46e;
+
 }
 
 .navbar-container h1{
@@ -32,6 +44,7 @@
 
 a{
     text-decoration: none;
+    white-space: nowrap;
 }
 
 a:hover{
@@ -61,14 +74,6 @@ a:visited{
     align-items: center;
 }
 
-.birb{
-    color: rgb(132, 169, 236);
-    font-size: 30px;
-    padding: 10px;
-    width: 30px;
-    height: 30px;
-}
-
 .navlinks .my-courses{
     margin-right: 0px;
     border-top-right-radius: 0px;
@@ -77,12 +82,17 @@ a:visited{
 
 .navlinks .user-courses .courses-arrow {
     margin-left: 0px;
+    margin-right: 20px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     background-color: rgb(132, 169, 236);
     border-left: 1px solid lightgrey;
     font-size: 15px;
     padding: 10px;
+}
+
+.course-dropdown{
+    display: none;
 }
 
 .dropdown{
@@ -94,15 +104,41 @@ a:visited{
 }
 
 .dropdown-list{
-    display: none;
+    min-width: 160px;
     width: auto;
     position: absolute;
+    z-index: 10;
+    padding: 0;
+    top: 22px;
+    right: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 1px 1px 15px 0px #9695956e;
 }
 
 .dropdown-list > li{
     list-style: none;
-    padding: 5px 10px;
+    padding: 10px 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 14px;
-    border-top: 2px solid lightskyblue;
+    font-size: 16px;
+    border-bottom: 1px solid rgb(236, 236, 236);
+}
+
+.dropdown-list > li:hover{
+    background-color: rgba(231, 231, 231, 0.7);
+    cursor: pointer;
+}
+
+.dropdown-list > li:last-child{
+    border-bottom: none;
+}
+
+.user-courses{
+    display: flex;
+    position: relative;
+    
+}
+
+button:focus{
+    outline: none;
 }
