--- a/frontend/src/stylesheets/session.css
+++ b/frontend/src/stylesheets/session.css
@@ -22,6 +22,7 @@
     font-size: 18px;
     padding: 10px;
     border-radius: 5px;
+    border: 2px solid rgb(231, 231, 231);
 }
 
 .form input:focus{
