--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -17,8 +17,9 @@
     padding: 20px;
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: white;
     box-shadow: 0px 1px 10px 0px #c4c4c46e;
-
+    z-index: 500;
 }
 
 .navbar-container h1{
@@ -34,7 +35,7 @@
 
 .navlinks a, 
 .logout{
-    margin: 0px 20px;
+    margin: 0px 10px;
     padding: 10px 20px;
     background-color: rgb(132, 169, 236);
     border-radius: 5px;
@@ -82,7 +83,7 @@ a:visited{
 
 .navlinks .user-courses .courses-arrow {
     margin-left: 0px;
-    margin-right: 20px;
+    margin-right: 10px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     background-color: rgb(132, 169, 236);
@@ -107,24 +108,25 @@ a:visited{
     min-width: 160px;
     width: auto;
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     padding: 0;
     top: 22px;
-    right: 20px;
+    right: 10px;
     background-color: white;
     border-radius: 5px;
     box-shadow: 1px 1px 15px 0px #9695956e;
 }
 
-.dropdown-list > li{
+.dropdown-list li{
     list-style: none;
-    padding: 10px 20px;
+    padding: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
     border-bottom: 1px solid rgb(236, 236, 236);
 }
 
-.dropdown-list > li:hover{
+.dropdown-list li:hover,
+.create-option a:hover{
     background-color: rgba(231, 231, 231, 0.7);
     cursor: pointer;
 }
@@ -133,12 +135,41 @@ a:visited{
     border-bottom: none;
 }
 
+.dropdown-list > li:first-child{
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.dropdown-list > li:last-child{
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
 .user-courses{
     display: flex;
     position: relative;
-    
 }
 
 button:focus{
     outline: none;
+}
+
+.dropdown-list .dropdown-item,
+.dropdown-list .create-option{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background: none;
+    margin: 0;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+}
+
+.dropdown-list .create-option i{
+    padding-right: 10px;
+    color: rgb(64, 152, 224);
 }
