--- a/frontend/src/stylesheets/lesson.css
+++ b/frontend/src/stylesheets/lesson.css
@@ -56,6 +56,7 @@
     height: fit-content;
     padding: 10px;
     margin: 15px;
+    margin-bottom: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .response{   
@@ -63,8 +64,9 @@
     border-radius: 4px;
     height: fit-content;
     padding: 10px;
-    margin: 15px;
-    padding-left: 10px;
+    margin-top: 3px;
+    margin-right: 15px;
+    margin-left: 25px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .comment-heatmap{
