fix the student null error

--- a/frontend/src/stylesheets/courses.css
+++ b/frontend/src/stylesheets/courses.css
@@ -126,7 +126,7 @@
 
 .lesson-list ol li{
     height: 20px;
-    width: 300px;
+    width: 400px;
     background-color: rgba(230, 230, 230, 0.7);
     padding: 10px;
     vertical-align: middle;
@@ -141,6 +141,7 @@
 }
 .lesson-list ol li a:hover, .lesson-list a{
    background-color:transparent;
+   color: #333;
 }
 
 .lesson-list ol li:hover{
