--- a/frontend/src/stylesheets/lesson.css
+++ b/frontend/src/stylesheets/lesson.css
@@ -59,16 +59,7 @@
     margin-bottom: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.response{   
-    background-color: white;
-    border-radius: 4px;
-    height: fit-content;
-    padding: 10px;
-    margin-top: 3px;
-    margin-right: 15px;
-    margin-left: 25px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+
 .comment-heatmap{
     display: flex;
     /* background-color: rgb(190, 211, 250); */
@@ -84,3 +75,37 @@
     height: auto;
     
 }
+.response{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: white;
+    border-radius: 4px;
+    height: fit-content;
+    padding: 10px;
+    margin-top: 3px;
+    margin-right: 15px;
+    margin-left: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.response-info{
+    margin-left: 25px;
+}
+.response-video-button{
+    background-color: rgb(132, 169, 236);
+    border-radius: 5px;
+    align-content: center;
+    margin-left: 25px;
+    width: 25px;
+    height: 25px;
+    border: none;
+    color: white;
+    font-weight: 800;
+    outline: none;
+}
+.response-video video{
+    max-width: calc(100% - 50px);
+    min-width: calc(100% - 50px);
+    outline: none;
+    margin: 0px 25px;
+}   
