--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -34,7 +34,7 @@ html, body{
 }
 
 .splash-content h1{
-    color: #333;
+    color: white;
     font-weight: 600;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 42px;
@@ -45,10 +45,20 @@ html, body{
 }
 
 .banner-box{
+    margin-top:30px;
     min-height: 300px;
     width: 100%;
     background-size: auto;
     background-repeat: no-repeat;
     background-position: center;
     z-index: 1;
+}
+
+.banner-header {
+    margin-left: 36%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-top: 43px;
+    font-weight: 400;
+    font-size: 27px;
+    color:#444
 }
