--- a/frontend/src/stylesheets/lesson.css
+++ b/frontend/src/stylesheets/lesson.css
@@ -185,7 +185,7 @@ border: 1px solid rgb(132, 169, 236);
     height: 25px;
 }
 .delete-button:hover{
-color: white;
-background-color: rgb(223, 0, 0);
-border: 1px solid white;
+color: rgb(223, 0, 0);
+background-color: white;
+border: 1px solid rgb(223, 0, 0);
 }
