first round style on show page

--- a/frontend/src/stylesheets/lesson.css
+++ b/frontend/src/stylesheets/lesson.css
@@ -45,8 +45,10 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .comment-box{
-    width: 90%;
+    width: calc(90% - 20px);
     background-color: rgb(190, 211, 250);
+    padding:10px;
+    padding-top: 7px;
     height: fit-content;
     border-radius: 0px 0px 6px 6px;
 }
@@ -57,6 +59,7 @@
     border-radius: 4px;
     height: fit-content;
     padding: 20px;
+    margin-top: 3px;
     margin-bottom: 0px;
     justify-content: space-around;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -65,8 +68,7 @@
     background-color: rgb(190, 211, 250);
     border-radius: 4px;
     height: fit-content;
-    padding: 10px;
-    padding-bottom: 0px;
+    padding: 0px 0px;
     margin-bottom: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -94,17 +96,14 @@
     height: fit-content;
     padding: 20px;
     margin-top: 3px;
-    margin-left: 25px;
+    margin-left: 15px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.response-info{
 
-}
 .response-video-button{
     background-color: rgb(132, 169, 236);
     border-radius: 5px;
     align-content: center;
-    margin-left: 25px;
     width: 25px;
     height: 25px;
     border: none;
@@ -116,7 +115,7 @@
     max-width: calc(100% - 50px);
     min-width: calc(100% - 50px);
     outline: none;
-    margin: 0px 25px;
+    margin: 5px 0px 0px 0px;
 }
 
 .comment-input{
@@ -141,7 +140,7 @@
     color: white;
     border: none;
     border-radius: 5px;
-    width: 36%;
+    width: 10%;
     background-color: rgb(132, 169, 236);
     outline: none;
     height: 25px;
@@ -179,7 +178,7 @@ border: 1px solid rgb(132, 169, 236);
     color: white;
     border: none;
     border-radius: 5px;
-    width: 36%;
+    width: 10%;
     background-color: rgb(132, 169, 236);
     outline: none;
     height: 25px;
