--- a/frontend/src/stylesheets/lesson.css
+++ b/frontend/src/stylesheets/lesson.css
@@ -83,13 +83,20 @@ html {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    height: 50px;
     width: 90%;
+    border-radius: 5px;
+    background-color:rgb(190, 211, 250) ;
 }
-
+.comment-heatmap{
+    cursor: pointer;
+    
+}
 .heatmap-canvas{
     width: calc(100% - 30px);
     height: auto;
-    
+    border-radius:25px;
+    background-color: white;
 }
 .response{
     display: flex;
