--- a/frontend/src/stylesheets/lesson-forms.css
+++ b/frontend/src/stylesheets/lesson-forms.css
@@ -9,13 +9,13 @@
     padding: 5px 5px;
 }
 
-.no-button{
+.form .no-button{
     background-color: rgb(185, 185, 185);
     position: relative;
 }
 
-.no-button:hover{
-    cursor: none;
+.form .no-button:hover{
+    cursor: initial;
     background-color: rgb(185, 185, 185);
 }
 
