--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -5,6 +5,13 @@ html, body{
     /* background-color: #fafafa; */
 }
 
+.content-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .splash-box{
     height: 500px;
     width: 100%;
@@ -40,8 +47,9 @@ html, body{
     font-weight: 600;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 42px;
+    margin-left: 6%;
     margin-bottom: 8%;
-    margin-left:6%;
+
     text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                  0px -5px 35px rgba(255,255,255,0.3);
 }
@@ -73,18 +81,58 @@ html, body{
     background-repeat: no-repeat;
     background-position: center;
     z-index: 1;
-    background-color: rgba(156, 156, 156, 0.728);
+    background-color: rgba(156, 156, 156, 0.89);
     border-radius: 5px;
      box-shadow: 2px 2px 16px 0px rgba(141, 140, 140, 0.75);
 
 }
 
 .banner-header {
-    margin-left: 36%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-top: 43px;
     font-weight: 600;
     font-size: 27px;
     color:#555;
     
+}
+
+.team, .name{
+    margin-top: 50px;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.name{
+    margin-top: 10px;
+    
+}
+
+.name a{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 19px;
+    color:#555;
+    margin-right: 5px;
+}
+
+.name a:hover{
+    font-weight: bold;
+    cursor: pointer;
+    color: #FBB040;
+    background-color: transparent;
+}
+
+.pic{
+    height:150px;
+    width:150px;
+    background-color: black;
+    border-radius: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 2px 2px 16px 0px rgba(141, 140, 140, 0.75);
+}
+
+#peter{
+    background-size: cover;
 }
