--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -105,17 +105,18 @@ html, body{
 
 .name{
     margin-top: 10px;
+    margin-bottom: 50px;
     
 }
 
 .name a{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 19px;
-    color:#555;
+    color:#333;
     margin-right: 5px;
 }
 
-.name a:hover{
+.name a:hover, #icon:hover{
     font-weight: bold;
     cursor: pointer;
     color: #FBB040;
@@ -136,3 +137,22 @@ html, body{
 #peter{
     background-size: cover;
 }
+
+footer{
+    margin-top: 30px;
+    height: 80px;
+    background-color: #fafafa;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color:#555;
+    justify-content: flex-end;
+    align-items: center;
+    display: flex;
+    margin-right: 5%;
+}
+
+#icon{
+    font-size: 24px;
+    margin-left: 10px;
+}
+
