--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -71,6 +71,10 @@ html, body{
     color: #333;
 }
 
+.splash-content a:hover{
+    background-color: rgb(255, 218, 116);
+}
+
 .banner-box{
     margin-top:30px;
     padding-top:30px;
