--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -39,7 +39,6 @@ html, body{
    z-index: 3;
    display: flex;
    flex-direction: column;
-  
 }
 
 .splash-content h1{
@@ -69,10 +68,13 @@ html, body{
     padding: 15px;
     width: 130px;
     color: #333;
+    -webkit-transition: background-color 100ms linear;
+    -ms-transition: background-color 100ms linear;
+    transition: background-color 100ms linear;
 }
 
 .splash-content a:hover{
-    background-color: rgb(255, 218, 116);
+    background-color: rgb(255, 229, 157);
 }
 
 .banner-box{
