--- a/frontend/src/stylesheets/navbar.css
+++ b/frontend/src/stylesheets/navbar.css
@@ -84,12 +84,17 @@ a:visited{
 .tri-logo{
     max-height: 40px;
     padding-right: 10px;
+    transition: transform 0.3s ease-in-out;
 }
 
 .logo:hover,
 .tri-logo:hover,
 .navbar-container h1:hover{
     cursor: pointer;
+}
+
+.tri-logo:hover{
+    transform: rotate(360deg);
 }
 
 .navlinks .my-courses{
@@ -127,7 +132,7 @@ a:visited{
     position: absolute;
     z-index: 100;
     padding: 0;
-    top: 22px;
+    top: 39px;
     right: 10px;
     background-color: white;
     border-radius: 5px;
