--- a/frontend/src/stylesheets/lesson-forms.css
+++ b/frontend/src/stylesheets/lesson-forms.css
@@ -21,11 +21,13 @@
 
 .spinner{
     display: none;
-    height: 20px;
+    /* display: block; */
+    /* height: 20px;
     width: 20px;
     border: 5px solid rgb(228, 228, 228);
     border-top: 5px solid rgb(100, 211, 226);
-    border-radius: 50%;
+    border-radius: 50%; */
+    /* transform: translateX(-50%) translateY(-50%); */
     position: absolute;
     top: 15%;
     animation: spin 800ms linear infinite;
