--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -159,7 +159,8 @@ footer{
     justify-content: flex-end;
     align-items: center;
     display: flex;
-    margin-right: 5%;
+    /* margin-right: 5%; */
+    padding: 0 5%;
 }
 
 #icon{
