--- a/frontend/src/stylesheets/lesson-forms.css
+++ b/frontend/src/stylesheets/lesson-forms.css
@@ -26,6 +26,7 @@
 }
 
 .spinner img{
+    display: none;
     max-height: 40px;
     text-align: center;
     transition: transform 0.3s ease-in-out;
@@ -35,7 +36,7 @@
     -webkit-animation: load 1000ms linear infinite;
 }
 
-.show-spinner{
+.spinner .show-spinner{
     display: block;
 }
 
