--- a/frontend/src/stylesheets/courses.css
+++ b/frontend/src/stylesheets/courses.css
@@ -4,8 +4,6 @@
     font-size: 16px;
 }
 
-
-
 .course-list{
     display: flex;
     flex-wrap: wrap;
@@ -19,22 +17,29 @@
     width: 300px;
     height: 200px;
     margin: 20px 20px; 
-    border-radius: 10px;
     text-align: center;
-    /* box-shadow: 2px 2px 16px 0px rgba(141, 140, 140, 0.75); */
     background-size: cover;
     position: relative;
     z-index: 1;
     padding-top: 30px;
-    
-    
+    box-sizing: border-box;
+    color: black;
+    box-shadow: 2px 2px 16px 0px rgba(151, 151, 151, 0.75);
+    transition: 300ms ease-in-out;
+}
+
+.course-list-item:hover{
+    box-shadow: 0px 0px 26px 0px rgba(45, 128, 224, 0.75);
+}
+
+.course-list-item-link:hover{
+    background-color: none;
 }
 
 .course-list-item p {
     font-size: 16px;
-    color: #444
+    color: #444;
 }
-
 
 .course-list-item a {
     color: rgb(64, 152, 224);
@@ -50,48 +55,44 @@
     cursor: pointer;
 }
 
-#title-container {
+#title #title-container {
     height: 60px;
-}
-
-#description-container {
-    padding: 17px;
-    text-align: left;
-}
-
-.course-list-item #title{
     font-size: 24px;
     text-decoration: none;
     color: #333;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
+    padding: 0px 20px;
     white-space : normal;
 }
 
-.course-list-item #title:hover{
-    
-    background-color: transparent;
-    color: rgb(64, 152, 224);
+.course-list-item #description-container {
+    padding: 17px;
+    text-align: left;
+    width: 300px;
+    white-space : normal;
+    box-sizing: border-box;
+}
+
+.course-list a:hover{
+    background-color: white;
 }
 
 .form label{
     margin-top: 30px;
-     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-     font-size: 18px;
-     
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 18px;
 }
 
 .form textarea{
-     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 18px;
     padding: 10px;
     border-radius: 5px;
     width: 230px;
-    /* height: 196px; */
-    /* margin-top: 50px; */
     margin-bottom: 30px;
     -webkit-appearance:none;
-    /* border: 1px solid #7c7b7b */
     border:none;
     box-shadow: 1px 1px 5px 0px #9695956e;
     resize: none;
@@ -113,7 +114,6 @@
 }
 .course-content{
     display: flex;
-
 }
 
 .lesson-list{
